@@ -6,7 +6,7 @@ Name:		globus-gssapi-gsi
 %global apache_license ASL 2.0
 %endif
 %global _name %(tr - _ <<< %{name})
-Version:	13.9
+Version:	13.10
 Release:	1%{?dist}
 Vendor:	Globus Support
 Summary:	Globus Toolkit - GSSAPI library
@@ -179,6 +179,9 @@ rm -rf $RPM_BUILD_ROOT
 %{_mandir}/man3/*
 
 %changelog
+* Fri Aug 31 2018 Globus Toolkit <support@globus.org> - 13.10-1
+- Fix resource leak when loading cert directories
+
 * Mon Aug 27 2018 Globus Toolkit <support@globus.org> - 13.9-1
 - Set the default minimum TLS version to 1.2.  1.0 and 1.1 are deprecated.
 - Set the maximum TLS version default to 1.2.  1.3 is not yet supported.
